<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping With Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_friend">Add Friend</string>
    <string name="action_wishlist">Wish List</string>
    <string name="action_reportSale">Report a Sale</string>
    <string name="edit_search">Search</string>
    <string name="testing">testing</string>
    <string name="edit_searchFriend">username</string>
    <string name="edit_addItem">Enter Name of Item</string>
    <string name="edit_addPrice">Enter Threshold Price of Item</string>
    <string name="reportLocation">Enter Location of Item</string>
    <string name="reportPrice">Enter Price of Item</string>
    <string name="reportItem">Item Name</string>
    <string name="reportQuantity">Quantity</string>
    <string name="button_searchFriend">Search</string>
    <string name="button_addItem">Add Item</string>
    <string name="button_reportSale">Report</string>
    <string name="app_title">Shopping With Friends</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retypePassword">Retype Password</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login_suceess">LoginSuceess</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_display_user_profile">DisplayUserProfileActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_sales_report">SalesReportActivity</string>

</resources>
