<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ShoppingWithFriend="http://schemas.android.com/apk/res-auto">
    <!-- Friends, should always appear in overflow -->
    <item android:id="@+id/action_friends"
        android:title="@string/action_friend"
        ShoppingWithFriend:showAsAction="never" />

    <item android:id="@+id/action_wishlist"
        android:title="@string/action_wishlist"
        ShoppingWithFriend:showAsAction="never" />

    <item android:id="@+id/action_reportSale"
        android:title="@string/action_reportSale"
        ShoppingWithFriend:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
        //android:showAsAction="never" />
</menu>