<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chan.shoppingwithfriend.SalesReportActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText android:id="@+id/reportItem"
                android:layout_weight="1.59"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportItem"
                android:layout_gravity="center_horizontal"/>

            <EditText android:id="@+id/reportPrice"
                android:layout_weight="1.59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportPrice"
                android:layout_gravity="center_horizontal"/>

            <EditText android:id="@+id/reportQuantity"
                android:layout_weight="1.59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportQuantity"
                android:layout_gravity="center_horizontal"/>

            <EditText android:id="@+id/reportLocation"
                android:layout_weight="1.59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportLocation"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reportSale"
                android:onClick="reportItem"
                android:id="@+id/button_reportSale"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>