<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <EditText android:id="@+id/addItem"
        android:layout_weight="1.59"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_addItem"
        android:layout_gravity="center_horizontal"/>

    <EditText android:id="@+id/addPrice"
        android:layout_weight="1.59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_addPrice"
        android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addItem"
            android:onClick="listItem"
            android:id="@+id/button_addItem"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wishListView"
        android:layout_weight="1.59"
        android:layout_below="@+id/button_addItem" />


    </LinearLayout>

</RelativeLayout>
